After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 633773 - fix build with recent gtk
fix build with recent gtk
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: 2.26.0
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2010-11-02 05:05 UTC by Matthias Clasen
Modified: 2010-11-02 18:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2010-11-02 05:05:50 UTC
Seems there are still some combo box thing left. A build against recent gtk ends here with:

/usr/bin/ld: ../libseahorse/.libs/libseahorse.a(seahorse-prefs.o): in function on_prefs_keyserver_add_clicked:seahorse-prefs.c:354: error: undefined reference to 'gtk_combo_box_remove_text'
/usr/bin/ld: ../libseahorse/.libs/libseahorse.a(seahorse-prefs.o): in function on_prefs_keyserver_add_clicked:seahorse-prefs.c:356: error: undefined reference to 'gtk_combo_box_append_text'
/usr/bin/ld: ../pgp/.libs/libseahorse-pgp.a(seahorse-gpgme-generate.o): in function seahorse_gpgme_generate_show:seahorse-gpgme-generate.c:438: error: undefined reference to 'gtk_combo_box_remove_text'
/usr/bin/ld: ../pgp/.libs/libseahorse-pgp.a(seahorse-gpgme-generate.o): in function seahorse_gpgme_generate_show:seahorse-gpgme-generate.c:440: error: undefined reference to 'gtk_combo_box_append_text'
/usr/bin/ld: ../ssh/.libs/libseahorse-ssh.a(seahorse-ssh-generate.o): in function on_response:seahorse-ssh-generate.c:172: error: undefined reference to 'gtk_combo_box_get_active_text'
/usr/bin/ld: ../ssh/.libs/libseahorse-ssh.a(seahorse-ssh-generate.o): in function on_change:seahorse-ssh-generate.c:128: error: undefined reference to 'gtk_combo_box_get_active_text'
/usr/bin/ld: ../gkr/.libs/libseahorse-gkr.a(seahorse-gkr-add-item.o): in function on_add_item_response:seahorse-gkr-add-item.c:105: error: undefined reference to 'gtk_combo_box_get_active_text'


I also notice that building against libnotify < 0.7 fails, because the definition of NOTIFY_CHECK_VERSION needs to eat the arguments:

#ifndef NOTIFY_CHECK_VERSION
#define NOTIFY_CHECK_VERSION(x,y,z)  0
#endif
Comment 1 Stef Walter 2010-11-02 18:49:27 UTC
Whoops. I thought your patch covered all those. I've committed a fix now:


commit 5b9aa67a8841cd54744fd365973ceed8c8524987
Author: Stef Walter <stef@memberwebs.com>
Date:   Tue Nov 2 18:48:41 2010 +0000

    Fixes related to new GTK+3 GtkComboText class.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=633773
Comment 2 Stef Walter 2010-11-02 18:54:43 UTC
commit c548f3b610f1a925bcca0203b19200ef07a50d7a
Author: Stef Walter <stef@memberwebs.com>
Date:   Tue Nov 2 18:50:02 2010 +0000

    NOTIFY_CHECK_VERSION define should eat arguments.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=633773