Fixes related to new GTK+3 GtkComboText class.

https://bugzilla.gnome.org/show_bug.cgi?id=633773