gkr/seahorse-gkr-add-item.c
@@ -102,8 +102,12 @@ on_add_item_response (GtkDialog *dialog, int response, SeahorseWidget *swidget)
 		secret = gtk_entry_get_text (GTK_ENTRY (widget));
 		
 		widget = seahorse_widget_get_widget (swidget, "item-keyring");
+#if GTK_CHECK_VERSION (2,91,2)
+		keyring = gtk_combo_box_text_get_active_text (GTK_COMBO_BOX_TEXT (widget));
+#else
 		keyring = gtk_combo_box_get_active_text (GTK_COMBO_BOX (widget));
-		
+#endif
+
 		attributes = gnome_keyring_attribute_list_new ();
 	    
 		request = gnome_keyring_item_create (keyring, GNOME_KEYRING_ITEM_NOTE, label, 
